DuPont DevSB/src/objects/Case_Material__c.object
<CustomObject>
    <description>Custom object linking Products to Case related list.</description>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>Actual cost of materials related to this case</description>
        <label>Actual Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Materials</relationshipLabel>
        <relationshipName>R00N30000001Wdk2EAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_Cost_Element__c</fullName>
        <label>ERP Cost Element</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fabricator Error</fullName>
                </value>
                <value>
                    <fullName>Labor Non Pay Direct</fullName>
                </value>
                <value>
                    <fullName>Labor Pay Direct</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Transaction_Date__c</fullName>
        <description>Date invoice transaction is created in ERP System (i.e. SAP)</description>
        <label>ERP Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Transaction_Nb__c</fullName>
        <description>ERP Transaction number (i.e. SAP code)</description>
        <label>ERP Transaction Nb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>Type of invoice</description>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy system product reference ID also used as primary key from legacy tool to map case to product during data migration</description>
        <label>Legacy Product ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Material related to this Case</description>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Case Materials</relationshipLabel>
        <relationshipName>Case_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this Case</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Materials</relationshipLabel>
        <relationshipName>CaseProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <description>To store unit of measure for product</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cubic meter</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
                <value>
                    <fullName>Gallon UK</fullName>
                </value>
                <value>
                    <fullName>Gallon US</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Litre</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Piece</fullName>
                </value>
                <value>
                    <fullName>Pound</fullName>
                </value>
                <value>
                    <fullName>Square foot</fullName>
                </value>
                <value>
                    <fullName>Square inch</fullName>
                </value>
                <value>
                    <fullName>Square meter</fullName>
                </value>
                <value>
                    <fullName>Ton, metric</fullName>
                </value>
                <value>
                    <fullName>Hectare</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>60MK</fullName>
                </value>
                <value>
                    <fullName>Jumbo</fullName>
                </value>
                <value>
                    <fullName>72MK</fullName>
                </value>
                <value>
                    <fullName>80MK</fullName>
                </value>
                <value>
                    <fullName>150MK</fullName>
                </value>
                <value>
                    <fullName>50LBS</fullName>
                </value>
                <value>
                    <fullName>50MK</fullName>
                </value>
                <value>
                    <fullName>10KG/140MK</fullName>
                </value>
                <value>
                    <fullName>20KG</fullName>
                </value>
                <value>
                    <fullName>850KG</fullName>
                </value>
                <value>
                    <fullName>1MT</fullName>
                </value>
                <value>
                    <fullName>20MK</fullName>
                </value>
                <value>
                    <fullName>25KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fUOM__c</fullName>
        <formula>Text(Product__r.Unit_Of_Measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>Case Material</label>
    <nameField>
        <displayFormat>CMID-{0000000}</displayFormat>
        <label>Case Material Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Materials</pluralLabel>
    <recordTypes>
        <fullName>BI_NA_Surfaces_Material</fullName>
        <active>true</active>
        <description>BI NA Surfaces Record type for creation of Case Materials</description>
        <label>BI NA Surfaces Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Surfaces_Read_Only_Page</fullName>
        <active>true</active>
        <label>BI NA Surfaces Read Only Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Material</fullName>
        <active>true</active>
        <description>Case Material Record Type</description>
        <label>Case Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Product</fullName>
        <active>true</active>
        <description>Case Product Record Type</description>
        <label>Case Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>